Movement Overjumping 2 cell - bugfix

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,7 @@ body {
   margin: 0;
 }
 
-@font-face{
+@font-face {
   font-family: 'Pixel';
-  src: url('./font/Pixel-LCD-7.woff');
+  src: url('font/Pixel-LCD-7.woff') format('woff');
 }
-
